# mc-server-cli

./: .gitignore  Cargo.toml  README.md  build.rs  config_defs.rs  config_template.toml
config/: .gitignore  Cargo.toml  build.rs
config/src/: lib.rs
src/: backup.rs  cli.rs  config.rs  config_defs.rs  deployment.rs  error.rs  executables.rs  home.rs  lib.rs  main.rs  mcrcon.rs  platforms.rs  rcon.rs  repo.rs  reqwest_client.rs  server.rs  server_rebuild.rs  session.rs  settings.rs  template.rs  tmux.rs  tmux_interactor.rs  update.rs  zellij.rs
src/creator/: mod.rs  purpur.rs
src/file_manager/: fabric.rs  mod.rs
