[package]
name = "mc-server"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
config = { path = "config" }
const_format = "0.2.34"
dirs = "6.0.0"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
thiserror = "2.0.16"
url = "2.5.7"
serde = "1.0.219"
toml = "0.9.5"

[build-dependencies]
config = { path = "config" }
thiserror = "2.0.16"
quote = "1.0.40"
proc-macro2 = "1.0.101"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
