[package]
name = "mcserver"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
config = { path = "config" }
const_format = "0.2.34"
dirs = "6.0.0"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
url = "2.5.7"
serde = "1.0.219"
toml = "0.9.5"
shellexpand = "3.1.1"
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["display"] }
thiserror = "2.0.16"

[build-dependencies]
config = { path = "config" }
quote = "1.0.40"
proc-macro2 = "1.0.101"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
shellexpand = "3.1.1"
color-eyre = "0.6.5"
